tools and technologies section removed

--- a/index.html
+++ b/index.html
@@ -157,6 +157,49 @@
                                         games, reading good books, experimenting with baking ingredients,
                                         and also spending time with friends and family.
                                     </p>
+                                    <div class="">
+                                        <p class="">
+                                            I am familiar with the following Tools & Technologies:
+                                        </p>
+                                        <ul class="flex skills-ul">
+                                            <li class="skills-li">
+                                                <span class="skills-span">Bootstrap</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Tailwind</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Sass</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">VueJS</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">JavaScript</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">FireBase</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Git</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">React</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Angular</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">NodeJs</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Ionic</span>
+                                            </li>
+                                            <li class="skills-li">
+                                                <span class="skills-span">Unit Testing</span>
+                                            </li>
+                                        </ul>
+                                    </div>
                                     <a href="https://veedah.hashnode.dev/" target="_blank" rel="noopener noreferrer"
                                         class="blog-link">Visit my blog
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
@@ -188,51 +231,6 @@
             <section class="skills-page" id="skills-page">
                 <div class="container py-5">
                     <div class="grid skill-contain">
-                        <div class="col-md-6">
-                            <div>
-                                <h2 class="headings">
-                                    Tools / Technologies
-                                </h2>
-                            </div>
-                            <div class="grid skill-grid">
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <img src="./images/vue-js.png" alt="">
-                                        <h5 class="contact-text p-1">VueJS</h5>
-                                    </div>
-                                </div>
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <img src="./images/Bootstrap_logo.svg" alt="">
-                                        <h5 class="contact-text p-1">Bootstrap</h5>
-                                    </div>
-                                </div>
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <img src="./images/firebase.png" alt="">
-                                        <h5 class="contact-text p-1">FireBase</h5>
-                                    </div>
-                                </div>
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <i class="fa fa-4x fa-git"></i>
-                                        <h5 class="contact-text p-1">Git</h5>
-                                    </div>
-                                </div>
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <i class="fab fa-4x fa-react"></i>
-                                        <h5 class="contact-text p-1">React</h5>
-                                    </div>
-                                </div>
-                                <div class="skill-cards card">
-                                    <div class="card-body">
-                                        <i class="fab fa-4x fa-angular"></i>
-                                        <h5 class="contact-text p-1">Angular</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="">
                             <div>
                                 <h2 class="headings">
@@ -337,8 +335,23 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">Fullstack Developer</h3>
-                                            <h4 class="edu-time">October 2022 – Present</h4>
+                                            <h3 class="edu-title">Front-End Developer</h3>
+                                            <h4 class="edu-time">August 2022 – Present</h4>
+                                        </div>
+                                        <h5 class="edu-venue">Alumunite</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                I implement designs using VueJs.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Software Engineer</h3>
+                                            <h4 class="edu-time">October 2022 – October 2023</h4>
                                         </div>
                                         <h5 class="edu-venue">Zoie Health</h5>
                                         <hr>
@@ -348,21 +361,6 @@
                                             </li>
                                             <li class="edu-list">
                                                 I maintain our website using Wordpress.org
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="edu-card card">
-                                    <div class="card-body">
-                                        <div class="edu-head flex">
-                                            <h3 class="edu-title">Front-End Developer</h3>
-                                            <h4 class="edu-time">August 2022 – Present</h4>
-                                        </div>
-                                        <h5 class="edu-venue">Alumunite</h5>
-                                        <hr>
-                                        <ul class="edu-ul">
-                                            <li class="edu-list">
-                                                I implement designs using VueJs.
                                             </li>
                                         </ul>
                                     </div>
@@ -433,7 +431,7 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">Core Team Member (Event Lead)</h3>
+                                            <h3 class="edu-title">Core Team - Event Lead</h3>
                                             <h4 class="edu-time">Sept 2021 - Sept 2022</h4>
                                         </div>
                                         <h5 class="edu-venue">Google Developer Students Club, University of Uyo Chapter
@@ -450,14 +448,14 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">Front-End Devloper</h3>
+                                            <h3 class="edu-title">Web Devloper</h3>
                                             <h4 class="edu-time">Feb 2021</h4>
                                         </div>
                                         <h5 class="edu-venue">GiveCampMemphis</h5>
                                         <hr>
                                         <ul class="edu-ul">
                                             <li class="edu-list">
-                                                I helped rebuild the mobile view of The Women Advocacy Center Site.
+                                                I helped rebuild the mobile view of The Women Advocacy Center Site using Wix.
                                             </li>
                                         </ul>
                                     </div>
