--- a/index.html
+++ b/index.html
@@ -512,23 +512,9 @@
                                         <div class="card-details w-100">
                                             <div class="w-100">
                                                 <h3 class="card-title">Daocoders Website</h3>
-                                                <!-- <button class="btn">
-                                                    <i class="fa fa-link" aria-hidden="true"></i> Show Details
-                                                </button> -->
                                                 <label for="project1" class="btn">
-                                                    <!-- <i class="fa fa-link" aria-hidden="true"></i>  -->
                                                     Show Details
                                                 </label>
-
-                                                <!-- <div class="certificate-img-contain">
-                                <div class="certificate-img">
-                                    <img class="w-100 view-certificate">
-                                </div>
-                            </div> -->
-                                                <!-- <a href="https://github.com/veedahv/my-blog" target="_blank"
-                                                    rel="noopener noreferrer" class="btn">
-                                                    <i class="fa fa-link" aria-hidden="true"></i> Repo Link
-                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
@@ -551,11 +537,6 @@
                                                         <li class="project-content">Vue</li>
                                                         <li class="project-content">Tailwind</li>
                                                     </ul>
-                                                    <!-- <a href="https://daocoders.net/" target="_blank"
-                                                        rel="noopener noreferrer" class="project-link"> -->
-                                                    <!-- <i class="fa fa-link" aria-hidden="true"></i>  -->
-                                                    <!-- Live Demo
-                                                    </a> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -629,11 +610,11 @@
                                                         <li class="project-content">Formspree</li>
                                                         <li class="project-content">Node</li>
                                                     </ul>
+                                                    <a href="https://empower-her-community.vercel.app/" target="_blank"
+                                                    rel="noopener noreferrer" class="project-link">
                                                     <!-- <i class="fa fa-link" aria-hidden="true"></i>  -->
-                                                    <!-- <a href="https://app.tipowl.com/" target="_blank"
-                                                        rel="noopener noreferrer" class="project-link">
                                                         Live Demo
-                                                    </a> -->
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
