--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,24 @@
                             <div class="project-grid">
                                 <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back"
                                     data-aos-offset="50">
-                                    <img src="./images/shooebai-snip.png" class="card-img w-100" alt="...">
-                                    <!-- <img src="./assets/projects/budget-app-img.jpg" class="card-img w-100" alt="..."> -->
+                                    <img src="./assets/projects/veedahv.png" class="card-img w-100" alt="...">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Veedahv</h3>
+                                        <p><b>Design:</b> By Aijay</p>
+                                        <h4>Technologies used:</h4>
+                                        <ul class="technologies">
+                                            <li>NodeJs</li>
+                                            <li>Tailwind</li>
+                                            <li>Nuxt</li>
+                                        </ul>
+                                        <a href="https://veedahv.netlify.app/" target="_blank"
+                                            rel="noopener noreferrer" class="btn"> Live Demo
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back"
+                                    data-aos-offset="50">
+                                    <img src="./assets/projects/shooebai-snip.png" class="card-img w-100" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Sho_oebai</h3>
                                         <p><b>Design:</b> Self inspired :)</p>
@@ -70,8 +86,22 @@
                                     </div>
                                 </div>
                             <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back" data-aos-offset="50">
-                                <img src="./images/blog-app.jpg" class="card-img w-100" alt="...">
-                                <!-- <img src="./assets/projects/blog-app.jpg" class="card-img w-100" alt="..."> -->
+                                <img src="./assets/projects/cloans.png" class="card-img w-100" alt="...">
+                                <div class="card-body">
+                                    <h3 class="card-title">Claons</h3>
+                                    <p><b>Design:</b> Self inspired :)</p>
+                                    <h4>Technologies used:</h4>
+                                    <ul class="technologies">
+                                        <li>CSS</li>
+                                        <li>Vue</li>
+                                    </ul>
+                                    <a href="https://claonsdesign.netlify.app/" target="_blank"
+                                        rel="noopener noreferrer" class="btn"> Live Demo
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back" data-aos-offset="50">
+                                <img src="./assets/projects/blog-app.jpg" class="card-img w-100" alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title">Blog Site</h3>
                                     <p><b>Design:</b> Self inspired :)</p>
